- BUG: Issue #603: TortoiseBlame: Blue wavy
       lines in C header files. (Sup Yut Sum)
- BUG: Issue #607: TortoiseMerge fails to restore
       Unicode characters. (Stefan)
- BUG: Issue #608: revision graph export to svg
       fails to escape text. (Stefan)
- BUG: Issue #611: log dialog does not fetch all
       revisions specified in merge dialog. (Stefan)

Version 1.8.4
- BUG: Issue 584: Revert from log dialog bottom pane
       fails if the file was deleted. (Sergey Azarkevich)
- BUG: Issue #585: repo browser doesn't refresh directory
       browser when clicking "up a directory". (Stefan)
- BUG: Issue #587: wrong colors in locatorbar
       in TortoiseBlame. (Stefan)
- BUG: Issue #588: subwcrev crash after replacing
       $WCREV$ in UTF-16 encoded file. (Stefan)
- BUG: Issue #590: "create patch" for added files
       always includes parent folders. (Stefan)
- NEW: Issue #586: Option to disable SVNParentPath
       handling in repo browser. (Stefan)

Version 1.8.3
- BUG: Issue #546: "Restore after commit" fails
       to restore in some situations. (Stefan)
- BUG: Issue #547: "Show Log" fails from
       the merge dialog. (Stefan)
- BUG: Issue #549: spell checker misses last
       char in a word. (Stefan)
- BUG: Issue #550: shell column handler
       not registered. (Stefan)
- BUG: Issue #556: Crash closing properties
       dialog. (Stefan)
- BUG: Issue #557: Ignored items always set
       global ignores. (Stefan)
- BUG: Issue #554: newline symbol is always
       the same in TortoiseMerge. (Stefan)
- BUG: Issue #558: Crash in log dialog. (Stefan)
- BUG: Issue #559: Crash in moved-blocks
       detection in TortoiseMerge. (Stefan)
- BUG: Issue #561: unified diff shows
       absolute paths. (Stefan)
- BUG: Issue #565: spurious NUL chars
       shown in blame. (Stefan)
- BUG: Issue #566: Wrong encoding detection
       in TortoiseBlame. (Stefan)
- BUG: Issue #567: too many rename
       suggestions. (Stefan)
- BUG: Issue #568: missing autocompletion for